# AoC2022-rs

./: Cargo.toml  rust-toolchain.toml
advent2022/: Cargo.toml
advent2022/benches/: bench.rs
advent2022/src/: day1.rs  day13.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  lib.rs  main.rs  tests.rs  utils.rs
advent2022/src/day14/: mod.rs  sand.html  wasm.rs
advent2022/src/day7/: mod.rs  parsing.rs  solution.rs
macros/: Cargo.toml
macros/src/: lib.rs
